cmake_minimum_required(VERSION 3.7)
PROJECT (circularBuffer)

if (${CMAKE_C_COMPILER_ID} STREQUAL "GNU" OR ${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -pedantic -Os")
	#set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_C_FLAGS} ${CMAKE_C_FLAGS_DEBUG} -g")
	set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} ${CMAKE_C_FLAGS_RELEASE}")
elseif (${CMAKE_C_COMPILER_ID} STREQUAL "MSVC")
	if (CMAKE_C_FLAGS MATCHES "/W[0-4]")
		string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
	else()
		set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} /W4")
	endif()
endif()

AUX_SOURCE_DIRECTORY(. SRC_FILES_C)

# FIND_PACKAGE ( Threads REQUIRED )
ADD_EXECUTABLE (circularBuffer ${SRC_FILES_C})
TARGET_LINK_LIBRARIES (circularBuffer ${CMAKE_THREAD_LIBS_INIT} )



